[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "2.3.0"
thiserror = "2.0.12"
spl-token = {version = "8.0.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
